syntax = "proto3";

option go_package = "."; // compile protobuff into this directory

package grpc;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}

  rpc Classroom (ClassroomRequest) returns (ClassroomResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}

// The request message containing the student's name and id.
message ClassroomRequest {
  string name = 1;
  string id = 2;
}

// The response message containing the student's classroom
message ClassroomResponse {
  string classroom = 1;
}